--- a/app/src/main/res/xml/calc_preferences.xml
+++ b/app/src/main/res/xml/calc_preferences.xml
@@ -6,6 +6,7 @@
     <ListPreference
         android:key="calc_format_displayed_decimals"
         android:title="@string/calc_format_displayed_decimals"
+        app:summary="@string/calc_format_displayed_decimals_desc"
         android:defaultValue="1"
         android:entryValues="@array/calc_format_displayed_decimals_values"
         android:entries="@array/calc_format_displayed_decimals"
@@ -15,10 +16,19 @@
     <ListPreference
         android:key="calc_format_decimal_separator"
         android:title="@string/calc_format_decimal_separator"
+        app:summary="@string/calc_format_decimal_separator_desc"
         android:defaultValue="0"
         android:entryValues="@array/calc_format_decimal_separator_values"
         android:entries="@array/calc_format_decimal_separator"
         app:icon="@drawable/ic_action_language"
+        />
+
+    <SwitchPreferenceCompat
+        app:key="calc_format_display_group_separator"
+        app:title="@string/calc_format_display_group_separator"
+        app:summary="@string/calc_format_display_group_separator_desc"
+        app:defaultValue="true"
+        app:icon="@drawable/ic_action_calc_separator"
         />
 
   </PreferenceCategory>
