--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -39,14 +39,14 @@
           style="@style/calc_style"
           />
 
-      <Spinner
+      <com.thecloudsite.stockroom.calc.CustomSpinner
           android:id="@+id/calc_stocks"
           android:text="@string/calc_stocks"
           app:layout_constraintBottom_toTopOf="@id/guidelineF2"
           app:layout_constraintEnd_toStartOf="@id/guidelineX3"
           app:layout_constraintStart_toEndOf="@id/guidelineX1"
           app:layout_constraintTop_toBottomOf="@+id/guidelineF3"
-          style="@style/calc_style"
+          style="@style/calc_selection_style"
           />
 
       <TextView
