--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,4 +145,14 @@ limitations under the License. -->
     <item name="android:background">@drawable/calc_roundcorner</item>
   </style>
 
+  <style name="calc_selection_style">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:layout_margin">4dp</item>
+    <item name="android:padding">4dp</item>
+    <item name="android:textSize">20sp</item>
+    <item name="android:textColor">#FFFFFF</item>
+    <item name="android:background">@drawable/calc_selection_roundcorner</item>
+  </style>
+
 </resources>
