--- a/app/src/main/res/layout/calc_spinner_item.xml
+++ b/app/src/main/res/layout/calc_spinner_item.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="48dp"
+    android:padding="4dp"
     android:text="@string/calc_stocks"
     android:textSize="18sp"
     android:textColor="#FFFFFF"
