--- a/app/src/main/res/layout/fragment_calc_prog.xml
+++ b/app/src/main/res/layout/fragment_calc_prog.xml
@@ -19,11 +19,22 @@
 
       <TextView
           android:id="@+id/calc_ZinsMonat"
-          android:text="K,P,J"
+          android:text="Test"
           android:textSize="12sp"
           app:layout_constraintBottom_toTopOf="@id/guidelineF2"
           app:layout_constraintEnd_toStartOf="@id/guidelineX2"
           app:layout_constraintStart_toEndOf="@id/guidelineX1"
+          app:layout_constraintTop_toBottomOf="@+id/guidelineF3"
+          style="@style/calc_style"
+          />
+
+      <TextView
+          android:id="@+id/calc_F1"
+          android:text="F1"
+          android:textSize="12sp"
+          app:layout_constraintBottom_toTopOf="@id/guidelineF2"
+          app:layout_constraintEnd_toStartOf="@id/guidelineX3"
+          app:layout_constraintStart_toEndOf="@id/guidelineX2"
           app:layout_constraintTop_toBottomOf="@+id/guidelineF3"
           style="@style/calc_style"
           />
@@ -60,7 +71,7 @@
 
       <TextView
           android:id="@+id/calc_ln"
-          android:text="ln(x)"
+          android:text="ln"
           app:layout_constraintBottom_toTopOf="@id/guideline789"
           app:layout_constraintEnd_toStartOf="@id/guidelineX2"
           app:layout_constraintStart_toEndOf="@id/guidelineX1"
@@ -80,21 +91,21 @@
 
       <TextView
           android:id="@+id/calc_pi"
-          android:text="\uD835\uDF0B"
-          app:layout_constraintBottom_toTopOf="@id/guideline456"
+          android:text="π"
+          app:layout_constraintBottom_toTopOf="@id/guideline123"
           app:layout_constraintEnd_toStartOf="@id/guidelineX2"
           app:layout_constraintStart_toEndOf="@id/guidelineX1"
-          app:layout_constraintTop_toBottomOf="@+id/guideline789"
+          app:layout_constraintTop_toBottomOf="@+id/guideline456"
           style="@style/calc_style"
           />
 
       <TextView
           android:id="@+id/calc_e"
           android:text="e"
-          app:layout_constraintBottom_toTopOf="@id/guideline456"
+          app:layout_constraintBottom_toTopOf="@id/guideline123"
           app:layout_constraintEnd_toStartOf="@id/guidelineX3"
           app:layout_constraintStart_toEndOf="@id/guidelineX2"
-          app:layout_constraintTop_toBottomOf="@+id/guideline789"
+          app:layout_constraintTop_toBottomOf="@+id/guideline456"
           style="@style/calc_style"
           />
 
