--- a/app/src/main/res/layout/dialog_calc.xml
+++ b/app/src/main/res/layout/dialog_calc.xml
@@ -25,7 +25,7 @@
           android:layout_margin="8dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
           app:endIconMode="clear_text"
           >
         <com.google.android.material.textfield.TextInputEditText
@@ -48,6 +48,7 @@
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
           app:layout_constraintHorizontal_bias="0.0"
+          app:layout_constraintVertical_bias="0.8"
           />
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout2"
