--- a/app/src/main/res/layout/fragment_calc_prog.xml
+++ b/app/src/main/res/layout/fragment_calc_prog.xml
@@ -73,72 +73,146 @@
           />
 
       <TextView
-          android:id="@+id/calc_sin"
-          android:text="sin"
-          app:layout_constraintBottom_toTopOf="@id/guidelineEnter"
+          android:id="@+id/calc_F5"
+          android:text="F5"
+          android:textSize="12sp"
+          app:layout_constraintBottom_toTopOf="@id/guidelineF1"
           app:layout_constraintEnd_toStartOf="@id/guidelineX2"
           app:layout_constraintStart_toEndOf="@id/guidelineX1"
-          app:layout_constraintTop_toBottomOf="@+id/guidelineF1"
+          app:layout_constraintTop_toBottomOf="@+id/guidelineF2"
+          style="@style/calc_style"
+          />
+
+      <TextView
+          android:id="@+id/calc_F6"
+          android:text="F6"
+          android:textSize="12sp"
+          app:layout_constraintBottom_toTopOf="@id/guidelineF1"
+          app:layout_constraintEnd_toStartOf="@id/guidelineX3"
+          app:layout_constraintStart_toEndOf="@id/guidelineX2"
+          app:layout_constraintTop_toBottomOf="@+id/guidelineF2"
+          style="@style/calc_style"
+          />
+
+      <TextView
+          android:id="@+id/calc_F7"
+          android:text="F7"
+          android:textSize="12sp"
+          app:layout_constraintBottom_toTopOf="@id/guidelineF1"
+          app:layout_constraintEnd_toStartOf="@id/guidelineX4"
+          app:layout_constraintStart_toEndOf="@id/guidelineX3"
+          app:layout_constraintTop_toBottomOf="@+id/guidelineF2"
+          style="@style/calc_style"
+          />
+
+      <TextView
+          android:id="@+id/calc_F8"
+          android:text="F8"
+          android:textSize="12sp"
+          app:layout_constraintBottom_toTopOf="@id/guidelineF1"
+          app:layout_constraintEnd_toStartOf="@id/guidelineX5"
+          app:layout_constraintStart_toEndOf="@id/guidelineX4"
+          app:layout_constraintTop_toBottomOf="@+id/guidelineF2"
+          style="@style/calc_style"
+          />
+
+      <TextView
+          android:id="@+id/calc_sin"
+          android:text="sin"
+          app:layout_constraintBottom_toTopOf="@id/guideline789"
+          app:layout_constraintEnd_toStartOf="@id/guidelineX2"
+          app:layout_constraintStart_toEndOf="@id/guidelineX1"
+          app:layout_constraintTop_toBottomOf="@+id/guidelineEnter"
           style="@style/calc_style"
           />
 
       <TextView
           android:id="@+id/calc_cos"
           android:text="cos"
-          app:layout_constraintBottom_toTopOf="@id/guidelineEnter"
+          app:layout_constraintBottom_toTopOf="@id/guideline789"
           app:layout_constraintEnd_toStartOf="@id/guidelineX3"
           app:layout_constraintStart_toEndOf="@id/guidelineX2"
-          app:layout_constraintTop_toBottomOf="@+id/guidelineF1"
+          app:layout_constraintTop_toBottomOf="@+id/guidelineEnter"
           style="@style/calc_style"
           />
 
       <TextView
           android:id="@+id/calc_tan"
           android:text="tan"
-          app:layout_constraintBottom_toTopOf="@id/guidelineEnter"
+          app:layout_constraintBottom_toTopOf="@id/guideline789"
           app:layout_constraintEnd_toStartOf="@id/guidelineX4"
           app:layout_constraintStart_toEndOf="@id/guidelineX3"
-          app:layout_constraintTop_toBottomOf="@+id/guidelineF1"
+          app:layout_constraintTop_toBottomOf="@+id/guidelineEnter"
+          style="@style/calc_style"
+          />
+
+      <TextView
+          android:id="@+id/calc_arcsin"
+          android:text="sin⁻¹"
+          app:layout_constraintBottom_toTopOf="@id/guideline456"
+          app:layout_constraintEnd_toStartOf="@id/guidelineX2"
+          app:layout_constraintStart_toEndOf="@id/guidelineX1"
+          app:layout_constraintTop_toBottomOf="@+id/guideline789"
+          style="@style/calc_style"
+          />
+
+      <TextView
+          android:id="@+id/calc_arccos"
+          android:text="cos⁻¹"
+          app:layout_constraintBottom_toTopOf="@id/guideline456"
+          app:layout_constraintEnd_toStartOf="@id/guidelineX3"
+          app:layout_constraintStart_toEndOf="@id/guidelineX2"
+          app:layout_constraintTop_toBottomOf="@+id/guideline789"
+          style="@style/calc_style"
+          />
+
+      <TextView
+          android:id="@+id/calc_arctan"
+          android:text="tan⁻¹"
+          app:layout_constraintBottom_toTopOf="@id/guideline456"
+          app:layout_constraintEnd_toStartOf="@id/guidelineX4"
+          app:layout_constraintStart_toEndOf="@id/guidelineX3"
+          app:layout_constraintTop_toBottomOf="@+id/guideline789"
           style="@style/calc_style"
           />
 
       <TextView
           android:id="@+id/calc_ln"
           android:text="ln"
-          app:layout_constraintBottom_toTopOf="@id/guideline789"
+          app:layout_constraintBottom_toTopOf="@id/guideline123"
           app:layout_constraintEnd_toStartOf="@id/guidelineX2"
           app:layout_constraintStart_toEndOf="@id/guidelineX1"
-          app:layout_constraintTop_toBottomOf="@+id/guidelineEnter"
+          app:layout_constraintTop_toBottomOf="@+id/guideline456"
           style="@style/calc_style"
           />
 
       <TextView
           android:id="@+id/calc_ex"
           android:text="e^x"
-          app:layout_constraintBottom_toTopOf="@id/guideline789"
+          app:layout_constraintBottom_toTopOf="@id/guideline123"
           app:layout_constraintEnd_toStartOf="@id/guidelineX3"
           app:layout_constraintStart_toEndOf="@id/guidelineX2"
-          app:layout_constraintTop_toBottomOf="@+id/guidelineEnter"
+          app:layout_constraintTop_toBottomOf="@+id/guideline456"
           style="@style/calc_style"
           />
 
       <TextView
           android:id="@+id/calc_pi"
           android:text="π"
-          app:layout_constraintBottom_toTopOf="@id/guideline123"
+          app:layout_constraintBottom_toTopOf="@id/guideline00"
           app:layout_constraintEnd_toStartOf="@id/guidelineX2"
           app:layout_constraintStart_toEndOf="@id/guidelineX1"
-          app:layout_constraintTop_toBottomOf="@+id/guideline456"
+          app:layout_constraintTop_toBottomOf="@+id/guideline0"
           style="@style/calc_style"
           />
 
       <TextView
           android:id="@+id/calc_e"
           android:text="e"
-          app:layout_constraintBottom_toTopOf="@id/guideline123"
+          app:layout_constraintBottom_toTopOf="@id/guideline00"
           app:layout_constraintEnd_toStartOf="@id/guidelineX3"
           app:layout_constraintStart_toEndOf="@id/guidelineX2"
-          app:layout_constraintTop_toBottomOf="@+id/guideline456"
+          app:layout_constraintTop_toBottomOf="@+id/guideline0"
           style="@style/calc_style"
           />
 
